# Journal-Stack

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  prisma.config.ts
app/: actions.ts  globals.css  layout.tsx
app/api/articles/[id]/open/: route.ts
app/api/journal-lookup/: route.ts
app/api/refresh/: route.ts
app/api/resolve/: route.ts
app/articles/[id]/: page.tsx
app/feed/: page.tsx
app/journals/: page.tsx
app/saved/: page.tsx
components/: app-shell.tsx  article-card.tsx  brand-mark.tsx  delete-journal-button.tsx  journal-form.tsx  local-stats.tsx  open-access-indicator.tsx  site-nav.tsx  theme-toggle.tsx
data/: journals.example.json
desktop/: package-lock.json  package.json
desktop/scripts/: seed.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui-placeholder/: index.html
lib/: articles.ts  db.ts  gt.ts  journals.ts  refresh.ts  resolver.ts  site.ts  types.ts  utils.ts  validation.ts
lib/sources/: crossref.ts  openalex.ts  rss.ts
prisma/: schema.prisma  seed.mjs
prisma/migrations/202604161735_init/: migration.sql
scripts/: apply-migration.mjs
