[package]
name = "journal-stack"
version = "0.1.0"
edition = "2021"

[lib]
name = "journal_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "journal-stack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
